syntax = "proto3";

package auth_service;

option go_package = "pushNotifications/proto/gen/auth_service;authpb";

service AuthService {
  // Register registers a new user.
  rpc Register (RegisterRequest) returns (RegisterResponse);
  // Login logs in a user and returns an auth token.
  rpc Login (LoginRequest) returns (LoginResponse);
  // ValidateToken validates an auth token.
  rpc ValidateToken (ValidateTokenRequest) returns (ValidateTokenResponse);
}

// TODO: На будущее, следующий сервис можно описать прямо здесь,
// либо вынести в отдельный файл
// service Permissions {
//    GetUserPermissions(GetUserPermissionsRequest) return UserPermissions
// }

message RegisterRequest {
  string email = 1; // Email of the user to register.
  string password = 2; // Password of the user to register.
}

message RegisterResponse {
  string user_id = 1; // User ID of the registered user.
}

message LoginRequest {
  string email = 1; // Email of the user to login.
  string password = 2; // Password of the user to login.
  int32 app_id = 3; // ID of the app to login to.
}

message LoginResponse {
  string token = 1; // Auth token of the logged in user.
}

message ValidateTokenRequest {
  string token = 1; // Auth token of the user to validate.
}

message ValidateTokenResponse {
  bool valid = 1;
  string user_id = 2;
}